--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
-    <artifactId>Arthur.Scharf.Lab1</artifactId>
+    <artifactId>Arthur.Scharf.a1</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -17,5 +17,5 @@
 		<version>9.3.0</version>
 	</dependency>
     </dependencies>
-    <name>Arthur.Scharf.Lab1</name>
+    <name>Arthur.Scharf.a1</name>
 </project>
